--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "styled-media-query": "^2.1.2",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
