--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
