--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-icons": "^4.3.1",
