--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
+    "emoji-picker-react": "^3.4.12",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
