--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
+    "react-to-print": "^2.14.3",
     "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2",
     "styled-reset": "^4.3.4",
