--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "emoji-picker-react": "^3.4.12",
     "history": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-datepicker": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
