--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.17",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@apollo/client": "^3.5.7",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
     "dotenv": "^10.0.0",
     "emoji-picker-react": "^3.4.12",
     "history": "^5.1.0",
+    "npm-check-updates": "^12.2.1",
     "npm-force-resolutions": "^0.0.10",
     "react": "^17.0.2",
     "react-datepicker": "^4.5.0",
@@ -22,18 +23,17 @@
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-to-print": "^2.14.3",
     "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2",
     "styled-reset": "^4.3.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^2.1.3"
   },
   "proxy": "https://openapi.naver.com",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "CI= react-scripts build",
     "test": "react-scripts test",
@@ -56,11 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-error-overlay": "^6.0.9"
-  },
-  "resolutions": {
-    "react-error-overlay": "6.0.9"
   }
 }
