--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "CI='' react-scripts build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
