--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dotenv": "^10.0.0",
     "emoji-picker-react": "^3.4.12",
     "history": "^5.1.0",
-    "node-polyfill-webpack-plugin": "^1.1.4",
     "npm-check-updates": "^12.2.1",
     "npm-force-resolutions": "^0.0.10",
     "path-browserify": "^1.0.1",
@@ -26,7 +25,7 @@
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-to-print": "^2.14.3",
