--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm-force-resolutions": "^0.0.10",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.5.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
