--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-to-print": "^2.14.3",
+    "react-youtube": "^8.2.1",
     "recoil": "^0.7.0",
     "styled-components": "^5.3.3",
     "styled-media-query": "^2.1.2",
