--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.28.0",
     "emoji-picker-react": "^3.5.1",
     "framer-motion": "^6.3.0",
+    "get-youtube-id": "^1.0.1",
     "history": "^5.3.0",
     "npm-force-resolutions": "^0.0.10",
     "path-browserify": "^1.0.1",
