--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.8",
     "@types/react": "^18.0.17",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.20.0",
