--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^6.3.0",
     "get-youtube-id": "^1.0.1",
     "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "npm-force-resolutions": "^0.0.10",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.1",
@@ -39,7 +40,6 @@
     "styled-reset": "^4.3.4",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://openapi.naver.com",
   "scripts": {
     "eject": "react-scripts eject",
     "start": "react-scripts start",
