--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^1.2.1",
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-to-print": "^2.14.6",
