--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.8",
     "@craco/craco": "^6.4.3",
+    "@react-pdf/renderer": "^3.1.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.1.1",
@@ -13,12 +14,14 @@
     "emoji-picker-react": "^3.5.1",
     "framer-motion": "^6.3.0",
     "get-youtube-id": "^1.0.1",
+    "graphql": "^16.6.0",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "npm-force-resolutions": "^0.0.10",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.1",
     "qs": "^6.10.3",
+    "ra-data-graphql": "^4.8.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^4.7.0",
